change to HTML button

--- a/app/views/profiles/_filter_content.html.erb
+++ b/app/views/profiles/_filter_content.html.erb
@@ -49,7 +49,7 @@
           <%# DUMMY BUTTON FOR NOW %>
           <button class="btn btn-float" style="user-select: none">Saved</button>
         </div>
-        <%= f.submit "Show results", class: "uppercase btn btn-primary w-100 py-3 height-unset" %>
+        <button class="uppercase btn btn-primary w-100 py-3" type="submit">Show results</button>
       </div>
     <% end %>
   </section>
