--- a/app/views/profiles/_my_profile.html.erb
+++ b/app/views/profiles/_my_profile.html.erb
@@ -30,17 +30,15 @@
   <!-- Share button -->
   <div class="profileButtons flex justify-content-around p-3">
     <%= link_to "#", class: "btn-lg px-0 btn-primary share-link", data: { url: "https://www.flxibl.io/profiles/#{@profile.id}", title: "#{@profile.display_name}'s' profile on flxibl", text: @profile.overview.truncate(120) }  do %>
-        <%= image_tag "icons/share-white.svg", alt: "Share profile" %>
-        <p class="textWhite">SHARE</p>
+      <%= image_tag "icons/share-white.svg", alt: "Share profile", width: 24, height: 24 %>
+      <p class="textWhite">SHARE</p>
     <% end %>
-      <div class="spacer">
+    <div class="spacer"></div>
 
-      </div>
-
-  <!-- Edit Button -->
+    <!-- Edit Button -->
 
     <%= link_to edit_profile_path(@profile), class: "btn-lg px-0 btn-white" do %>
-      <%= image_tag "icons/edit.svg", alt: "edit" %> EDIT
+      <%= image_tag "icons/edit.svg", alt: "edit", width: 24, height: 24 %> EDIT
     <% end %>
   </div>
 
@@ -59,9 +57,9 @@
     <!-- Tabs -->
 
     <div class="profileTabs" id="tabs">
-      <%= link_to "About", profile_path(@profile, tab: 'about', anchor: 'skills'), id: "about-tab", class: "tab #{'active' if params[:tab] == 'about' || !params[:tab] }", remote: true %>
-      <%= link_to "Links", profile_path(@profile, tab: 'links', anchor: 'skills'), id: "link-tab", class: "tab #{'active' if params[:tab] == 'links' }", remote: true %>
-      <%= link_to "Ratings (#{@ratings&.count})", profile_path(@profile, tab: 'notes', anchor: 'skills'), id: "note-tab", class: "tab #{'active' if params[:tab] == 'notes' }", remote: true %>
+      <%= link_to "About", profile_path(@profile, tab: 'about', anchor: 'skills'), id: "about-tab", class: "tab textBetween #{'active' if params[:tab] == 'about' || !params[:tab] }", remote: true %>
+      <%= link_to "Links", profile_path(@profile, tab: 'links', anchor: 'skills'), id: "link-tab", class: "tab textBetween #{'active' if params[:tab] == 'links' }", remote: true %>
+      <%= link_to "Ratings (#{@ratings&.count})", profile_path(@profile, tab: 'notes', anchor: 'skills'), id: "note-tab", class: "tab textBetween #{'active' if params[:tab] == 'notes' }", remote: true %>
     </div>
 
     <div class="p-3" id="tab-content">
