--- a/app/views/profiles/_my_profile.html.erb
+++ b/app/views/profiles/_my_profile.html.erb
@@ -46,7 +46,7 @@
   <!-- Skills -->
   <div class="container">
     <div class="profileSection  p-3" id="skills">
-      <h3 class="small mb-2 mt-0 semi-bold textBetween textLightBlack">KEY SKILLS</h3>
+      <h3 class="small mb-2 mt-0 semi-bold textSm textLightBlack">KEY SKILLS</h3>
       <div class="flex justify-content-start skill-pills mb-2">
         <% @profile.skill_list.each do |skill| %>
           <span class="skill-pill"><%= skill %></span>
