min height on description field

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -49,7 +49,7 @@
                     wrapper_html: { class: "mb-3" } %>
         <%= f.input :description,
                     label_html: { class: "block mb-1 textLightBlack textBetween" },
-                    input_html: { value: @parent_booking&.description, class: "w-100" },
+                    input_html: { value: @parent_booking&.description, class: "w-100 with-min-height" },
                     wrapper_html: { class: "mb-3" } %>
 
         <div class="flex justify-content-center items-end mb-3">
